# Estructuras-de-datos-c-

./: .gitignore  CMakeLists.txt  Invertir_cadena.cpp  bloomfilter.cpp  busqAmigos.cpp  cache.cpp  compila  fifolifo.cpp  pruenaesta.cpp  sortedArray.cpp  tab.cpp
ArbolBusqueda/: ArbolDeBusqueda.cpp  ArbolDeBusqueda2.cpp
ArbolTrie/: arbol trie.cpp
Diapositivas/: Cola_pila.cpp  Pila_cola.cpp  listas_duplicadas.cpp  unirvectores.cpp
Pract10_Grafos/: Buscar_Amigos2.cpp  CaminoBFS.cpp  Convertir_Palabras.cpp  Hashmap.h  prueba.cpp
Pract11_Cache/: CMakeLists.txt  cache.cpp  cache2.cpp
Pract11_Cache/include/: cache2.h
Pract11_Cache/tests/: CMakeLists.txt  test_cache2.cpp
Pract12_App/: App_getline.cpp  App_preprocessor.cpp
Pract13_Threads/: Pool_hilos.cpp  exe.cpp  hilos1_lineaxlinea.cpp  hilos2_basic5.cpp  hilos3_queue.cpp  hilos4_fifolifo.cpp
Pract14_B-tree/: CMakeLists.txt  main.cpp
Pract1_Fifolifo/: fifolifo.cpp
Pract2_ArbolBusqueda/: ArbolDeBusqueda.cpp  ArbolDeBusqueda2.cpp
Pract4_Medidas_de_tendencia_central/: Invertir_cadena.cpp  MedidasDeTendenciaCentral.cpp
Pract6_Diapositivas/: Elemento_unico.cpp  cerrar_parentesis.cpp  palindromo.cpp  unirlistas.cpp  unirvectores.cpp
Pract7_Recorridos DFS/: Recorridos DFS.cpp
Pract8_TablasHash/: setHas.cpp
Pract9_Bloomfilter/: bitset.h  bloomfilter.cpp
Priority_Queue/: minheap2.cpp
TablasHash/: Hashmap.cpp  setHas.cpp  tablaHash.cpp
fifolifo/: .gitignore  .gitignore.txt  fifolifo.cpp
grafos/: Buscar_Amigos.cpp  Buscar_Amigos2.cpp  CaminoBFS.cpp  CaminoDFS.cpp  Hashmap.h
(+17 files in other folders)
